WP-7934 Wrapping issue for names and titles

--- a/sass/conditionals/insights/related-to-idea-story.sass
+++ b/sass/conditionals/insights/related-to-idea-story.sass
@@ -68,7 +68,7 @@
     .group-wrapper-name,
     .field-name-title
       line-height: 0
-      padding-left: 52px
+      padding-left: 54px
       a
         font-family: $font-demi
         display: inline-block
@@ -84,7 +84,7 @@
     .field-name-field-company-organization
       font-size: 16px
       line-height: 1.3
-      padding-left: 52px
+      padding-left: 54px
 
   // Alumni name and year fix.
   .field-name-field-person-ref-unlimited
@@ -276,7 +276,7 @@
   padding-left: 0px
 
 .group-wrapper-related .field-name-field-person-ref-unlimited .person-position .field-collection-item-field-staff-item .field-name-field-department-office
-  padding-left: 52px
+  padding-left: 54px
 
 .field-name-field-related-faculty .node-faculty .person-position, .field-name-field-related-faculty .node-faculty .person-name
   width: 160px
